# sefs

./: Cargo.toml
.github/workflows/: main.yml
rcore-fs/: Cargo.toml
rcore-fs-cli/: Cargo.toml
rcore-fs-cli/src/: fuse.rs  lib.rs  main.rs  zip.rs
rcore-fs-devfs/: Cargo.toml
rcore-fs-devfs/src/: lib.rs
rcore-fs-devfs/src/special/: mod.rs  null.rs  zero.rs
rcore-fs-ext2/: Cargo.toml
rcore-fs-ext2/src/: lib.rs
rcore-fs-fuse/src/: zip.rs
rcore-fs-hostfs/: Cargo.toml
rcore-fs-hostfs/src/: lib.rs
rcore-fs-mountfs/: Cargo.toml
rcore-fs-mountfs/src/: lib.rs  tests.rs
rcore-fs-ramfs/: Cargo.toml
rcore-fs-ramfs/src/: lib.rs
rcore-fs-sefs/: Cargo.toml
rcore-fs-sefs/src/: lib.rs  structs.rs
rcore-fs-sefs/src/dev/: mod.rs  std_impl.rs
rcore-fs-sfs/: Cargo.toml
rcore-fs-sfs/src/: lib.rs  structs.rs  tests.rs
rcore-fs-ucore/: Cargo.toml
rcore-fs-unionfs/: Cargo.toml
rcore-fs-unionfs/src/: lib.rs  tests.rs
rcore-fs/src/: dirty.rs  lib.rs  std.rs  vfs.rs
rcore-fs/src/dev/: block_cache.rs  mod.rs  std_impl.rs
sefs-cli/: Makefile
sefs-cli/app/: Cargo.toml  build.rs
sefs-cli/app/src/: enclave.rs  main.rs  sgx_dev.rs
sefs-cli/enclave/: Cargo.toml  Enclave.edl  Makefile
sefs-cli/enclave/src/: lib.rs
sefs-fuse/: Makefile
sefs-fuse/app/: Cargo.toml  build.rs
sefs-fuse/app/src/: enclave.rs
sefs-fuse/enclave/: Enclave.lds
